--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Dependencies
 node_modules/
+
+# Build output
+dist/
+*.local
+
+# Environment variables
+.env
+.env.local
+.env.production.local
+.env.development.local
+
+# Editor directories
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Vercel
+.vercel
